# spark_minions

./: README.md  app.py  pyproject.toml
minions/: minions_ex.py
minions/clients/: openai.py
